# hmatrix-nipals

./: hmatrix-nipals.cabal
src/Numeric/LinearAlgebra/: NIPALS.hs
test/: tests.hs
